fix(signpost): prevent header from overlapping top of scrollbar (#1152)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [x] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: #871, CDE-1590

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

---------

--- a/projects/angular/src/popover/signpost/_properties.signpost.scss
+++ b/projects/angular/src/popover/signpost/_properties.signpost.scss
@@ -25,7 +25,7 @@
       --clr-signpost-pointer-border: #{signpost-variables.$clr-signpost-pointer-border};
       --clr-signpost-pointer-invisible-border: #{signpost-variables.$clr-signpost-pointer-invisible-border};
       --clr-signpost-pointer-psuedo-border: #{signpost-variables.$clr-signpost-pointer-psuedo-border};
-      --clr-signpost-content-padding: #{variables.$clr_baselineRem_1};
+      --clr-signpost-content-padding: 0 #{variables.$clr_baselineRem_1} #{variables.$clr_baselineRem_1};
       --clr-signpost-content-color: var(--clr-color-neutral-700);
 
       --clr-signpost-content-header-position: absolute;
